Restructure DAL implementation Common DALException contract for DAL implementations Initial RDF4j DAL implementation Code cleanup